--- a/aplication/front-end/package.json
+++ b/aplication/front-end/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/material": "^5.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -40,8 +43,12 @@
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.32.0",
+    "@typescript-eslint/parser": "^5.32.0",
     "commitizen": "^4.2.5",
-    "commitlint-config-gitmoji": "^2.2.5"
+    "commitlint-config-gitmoji": "^2.2.5",
+    "eslint": "^8.21.0",
+    "eslint-plugin-react": "^7.30.1"
   },
   "config": {
     "commitizen": {
